@@ -1,3 +1,5 @@
+HEAD
+	+ Move enable field to first row in ConfigureDispatcherDataTable
 1.3.15
 	+ Bug fix: Call EBox::Global::sortModulesByDependencies when
 	  saving all modules and remove infinite loop in that method.
